fix: collapse 兼容性处理

--- a/packages/components/cell/index.less
+++ b/packages/components/cell/index.less
@@ -1,7 +1,6 @@
 @import '../style/mixins/hairline';
 
-:root,
-:host {
+page {
   --van-cell-font-size: var(--van-font-size-md);
   --van-cell-line-height: 24px;
   --van-cell-vertical-padding: 10px;
